force-app/main/default/objects/Product2/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IMAGE( DisplayUrl , &quot;Text Name of Image&quot;,36,36)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>