force-app/main/default/objects/Product2/fields/Product_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_URL__c</fullName>
    <label>Product URL</label>
    <type>Url</type>
</CustomField>