force-app/main/default/objects/Product2/fields/Watch_Type__c.field-meta.xml
<CustomField>
    <fullName>Watch_Type__c</fullName>
    <label>Watch Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analog</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Analog-Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>